# qcp

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  biome.json  design-qa.md  package-lock.json  package.json  skills-lock.json  tsconfig.build.json  tsconfig.json
.github/workflows/: ci.yml  release.yml
Formula/: qcp.rb
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/qcp-web/: next.config.ts  package.json  tsconfig.json
scripts/: build-desktop-sidecar.ts  install.ps1  install.sh  test-homebrew-local.sh
src/: index.ts  runtime.ts  sdk.test.ts  sdk.ts  sqlite-client.test.ts  sqlite-client.ts  version.ts  web.test.ts  web.ts
src/agents/: amazon-marketing-cloud-agent.ts  automation-agent.test.ts  automation-agent.ts  chart-tools.test.ts  chart-tools.ts  config-tools.test.ts  config-tools.ts  database-agent.ts  database-tools.test.ts  database-tools.ts  index.ts  model-config.ts  neon-agent.test.ts  neon-agent.ts  oracle-postgres-agent.test.ts  oracle-postgres-agent.ts  postgres-agent.ts  prisma-agent.test.ts  prisma-agent.ts  provider-factory.test.ts  provider-factory.ts  supabase-agent.test.ts  supabase-agent.ts  supervisor-agent.test.ts  supervisor-agent.ts  supervisor-tools.test.ts  supervisor-tools.ts  workflow-coordinator.ts
src/amc/: client.test.ts  client.ts  config.ts  query-service.ts  (+7 more)
tests/: safety.test.ts  schema.test.ts
(+134 files in other folders)
